# pytermgui

./: .gitignore  .pylintrc  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  gen_ref_nav.py  index.html  mkdocs.yml  notes.md  objects.inv  project-config  pyproject.toml  pytermgui.html  search.js  setup.py  sitemap.xml  todo.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md
.github/workflows/: auto_generate_docs.yml  generate_docs.yml  mypy.yml  pylint.yml  pytest.yml
docs/: CNAME  exports.md  future.md  gen_docstring_svgs.py  gen_ref_nav.py  getting_started.md  index.html  inspect.md  intro.md  pytermgui.html  search.js  welcome.md
docs/pytermgui/: animations.html  animator.html  ansi_interface.html  cmd.html  color_info.html  color_table.html  colors.html  context_managers.html  enums.html  exceptions.html  exporters.html  fancy_repr.html  file_loaders.html  helpers.html  highlighters.html  input.html  inspector.html  markup.html  palettes.html  parser.html  prettifiers.html  pretty.html  regex.html  serialization.html  serializer.html  term.html  terminal.html  widgets.html  win32console.html  window_manager.html
docs/pytermgui/markup/: aliases.html  language.html  macros.html  parsing.html  style_maps.html  tokens.html
docs/pytermgui/widgets/: base.html  boxes.html  button.html  buttons.html  checkbox.html  collapsible.html  color_picker.html  containers.html  extra.html  fancy_repr.html  frames.html  inline.html  input_field.html  interactive.html  keyboard_button.html  (+5 more)
docs/src/: exports1.py  inspect2.py  todo.py
docs/stylesheets/: extra.css
docs/tim/: index.md  markup_language.md  syntax.md  tags.md  usage.md
docs/walkthroughs/: index.md  inline.md
docs/widgets/: attrs.md  builtins.md  custom.md  styling.md
examples/: README.md  basic_menu.py  bezocalc.py  boilerplate.py  group_issue_one.py  hello_world.py  hello_world.yaml  interactive.py  krm  project_picker.py  readme.py  readme_example.py  simple_app.py  slow_typing.py  wcwidth_demo.py
exports/: index.html
future/: index.html
inspect/: index.html
pytermgui/: __init__.py  _linux.py  _win.py  animations.html  animations.py  animator.py  ansi_interface.html  ansi_interface.py  classes.py  cmd.html  cmd.py  color_info.html  color_info.py  color_table.py  colors.html  colors.py  context_managers.html  context_managers.py  enums.html  enums.py  exceptions.html  exceptions.py  exporters.html  exporters.py  fancy_repr.html  fancy_repr.py  file_loaders.html  file_loaders.py  globals.py  helpers.html  helpers.py  highlighters.html  highlighters.py  html.py  input.html  input.py  inspector.html  inspector.py  keys.py  markup.html  (+24 more)
pytermgui/markup/: __init__.py  aliases.html  aliases.py  language.html  language.py  macros.html  macros.py  parsing.html  parsing.py  style_maps.html  style_maps.py  tokens.html  tokens.py
pytermgui/utils/: __init__.py  interactive.py
pytermgui/widgets/: __init__.py  base.html  base.py  boxes.html  boxes.py  button.html  button.py  buttons.py  checkbox.html  checkbox.py  collapsible.html  collapsible.py  color_picker.html  color_picker.py  containers.html  containers.py  extra.py  fancy_repr.html  fancy_repr.py  frames.py  group.py  inline.html  inline.py  input_field.html  input_field.py  interactive.py  keyboard_button.html  keyboard_button.py  layout.py  layouts.py  overflow_preventer.py  pixel_matrix.html  pixel_matrix.py  slider.html  slider.py  styles.html  styles.py  test.py  toggle.html
pytermgui/window_manager/: __init__.py  compositor.html  compositor.py  layouts.html  layouts.py  manager.html  manager.py  window.html  window.py
reference/SUMMARY/: index.html
reference/pytermgui/: index.html
sandbox/: animations.py  colors.py  common.py  common.yaml  exp_groups.py  inputfield.py  layout_widgets.py  layouts.py  scrolling.py  semantic_mouse.py
search/: search_index.json
src/: counter.py  crud.py  inline_login.py  inspect1.py  styles.py
src/tim/: index.py  tags_colors_fore_back.py  tags_pseudo1.py  usage_alias.py  usage_define1.py  usage_print.py
src/tutorial/: clock.py
src/widgets/: showcase.py  simple.py  style_callables.py
testers/: depth_test.py  operators_test.py  serialization_test.py
testers/static/: serialized.json
tests/: _exporter_targets.py  colorgrids.py  container_test.py  environment.yaml  general_test.py  inputfield_test.py  mouse_test.py  ongoing.py  splitter_test.py  test.json  test.yaml  test_animations.py  test_auto.py  test_colors.py  test_dump_n_load.py  test_exporters.py  test_fancy_repr.py  test_helpers.py  test_highlight_markup_literal.py  test_layouts.py  test_parser.py  test_regex.py  test_styles.py  test_wcwidth_integration.py  yamlload.py
tim/: index.html
tim/tags/: index.html
tim/usage/: index.html
utils/: create_badge.py  gen_readme_images.py  generate_keys.py  generate_title.py  lint_prose.py  list_todos.py  overflow_preventer.py
utils/readme_scripts/: clock.py  contact.py
walkthroughs/: index.html
walkthroughs/inline/: index.html
widgets/attrs/: index.html
widgets/builtins/: index.html
widgets/custom/: index.html
widgets/styling/: index.html
(+85 files in other folders)
